kubernetes/apps/observability/gatus/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-probe
spec:
  hostnames:
    - gatus-probe.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external-probe
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /health
          method: GET
      backendRefs:
        - name: gatus
          port: 8080
